--- a/test/style.css
+++ b/test/style.css
@@ -1,13 +1,13 @@
 #image{
     width: 800px;
 }
-.Navcenter{
+.Navcenter {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow:hidden;
     background-color: red;
-    width: 200px
+    width: 200px;
 }
 li a {
     display:block;
