--- a/test/style.css
+++ b/test/style.css
@@ -2,22 +2,24 @@
     width: 800px;
 }
 .Navcenter {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow:hidden;
-    background-color: red;
-    width: 200px;
-    border: 1px solid #555;
-    
+   background-color: red;
+   padding:5px;
+   margin:0;
+   list-style-type:none;
+   width:150px;
+
 }
-.Navcenter a {
-    display:block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+div.Mainlinks>li>a {
     text-decoration: none;
+    color:white;
+    margin:2px;
+    padding:5px;
+    display:block;
+    padding:8px 16px;
+    
+
 }
+
 .Navcenter a:hover {
     background-color: white;
     color: red;
